--- a/package.json
+++ b/package.json
@@ -25,15 +25,14 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-cheerio": "^0.6.2",
-    "gulp-csscomb": "^3.0.6",
     "gulp-cssnano": "^2.1.1",
     "gulp-imagemin": "^2.4.0",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.1.0",
+    "gulp-pug": "^3.0.2",
     "gulp-rigger": "^0.5.8",
     "gulp-rimraf": "^0.2.0",
     "gulp-sass": "^2.2.0",
-    "gulp-sass-lint": "^1.1.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-svg-sprite": "^1.2.19",
     "gulp-svgmin": "^1.2.2",
@@ -41,7 +40,10 @@
     "gulp-watch": "^4.3.5",
     "imagemin-pngquant": "^4.2.0",
     "lost": "^6.7.2",
-    "precommit-hook": "^3.0.0"
+    "precommit-hook": "^3.0.0",
+    "stylefmt": "^3.2.1",
+    "stylelint": "^6.5.0",
+    "stylelint-config-standard": "^8.0.0"
   },
   "pre-commit": []
 }
